# compile_time_protections

./: .aptly.conf  .devcontainer.json  .gitignore  justfile
.github/workflows/: build.yml  release.yml
toy_service/: Cargo.toml  README.md
toy_service/debian/: service
toy_service/src/: main.rs
vulnerable_binary/: .gitignore  Makefile  SizeComparisons.xlsx  build.sh  test_fortify_support.cpp  toy_service.cpp  vulnerable_binary
